# coding-challenge

./: LICENSE  README.md  pyproject.toml
task1/tests/: README.md  conftest.py  interface.py  test_api.py
task2/: README.md  pyproject.toml
task2/my_data_store/: api.py  main.py  settings.py  utils.py
task2/src/my_data_store/: api.py  main.py  settings.py
task2/tests/: README  example.json  file.json  test.py  test_ftp_json.py  test_ftp_xml.py  test_insert.py  test_local_json.py  test_local_xml.py  test_my_data_store.py
