[tool.poetry]
name = "y42-coding-challenge"
version = "0.1.0"
description = ""
authors = ["Ehsan <barkhordar.me@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.2"
pytest-mock = "^3.7.0"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
