[tool.poetry]
name = "my-data-store"
packages = [
    { include = "my_data_store" },
]
version = "0.0.1"
description = "Store and retrieve arbitrary data in multiple formats & destinations"
readme = "README.md"
authors = ["Ehsan <barkhordar.me@gmail.com>"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = "^3.8"
dicttoxml = "^1.7.4"
xmltodict = "^0.13.0"


[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
